--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "illuminate/pagination": "^7.9",
         "jumbojett/openid-connect-php": "^0.9.0",
         "lavary/crunz": "^2.1",
-        "lcobucci/jwt": "^3.3",
+        "lcobucci/jwt": "3.3.1",
         "mikealmond/color": "^0.1.3",
         "monolog/monolog": "1.19",
         "php-di/php-di": "^6.0",
