--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "next-auth": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sqlite3": "^5.0.2"
+    "uuidv4": "^6.2.10"
   }
 }
