--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fontsource/roboto": "^4.4.5",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/styles": "^4.11.4",
     "classnames": "2.3.1",
     "moment": "2.29.1",
