--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/styles": "^4.11.4",
     "classnames": "2.3.1",
+    "country-state-city": "^3.0.0",
     "moment": "2.29.1",
     "next": "10.2.0",
     "next-auth": "latest",
