--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/styles": "^4.11.4",
+    "axios": "^0.21.1",
     "classnames": "2.3.1",
     "country-state-city": "^3.0.0",
     "moment": "2.29.1",
