--- a/package.json
+++ b/package.json
@@ -29,25 +29,34 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/styles": "^4.11.4",
+    "@react-leaflet/core": "^1.1.0",
+    "@react-leaflet/universal-leaflet": "^1.0.1",
     "axios": "^0.21.1",
     "classnames": "2.3.1",
     "country-state-city": "^3.0.0",
+    "leaflet": "^1.7.1",
     "moment": "2.29.1",
     "next": "10.2.0",
     "next-auth": "latest",
     "next-compose-plugins": "2.2.1",
     "next-images": "1.7.0",
+    "next-transpile-modules": "^8.0.0",
     "nextjs-redirect": "5.0.2",
-    "node-sass": "5.0.0",
+    "node-sass": "^4.14.1",
     "nouislider": "15.1.0",
     "path": "0.12.7",
     "prop-types": "15.7.2",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-datetime": "3.0.4",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.0",
     "react-slick": "0.28.1",
+    "react-slugify": "^2.0.3",
     "styled-components": "5.3.0",
     "uuidv4": "^6.2.10",
-    "webpack": "4.46.0"
+    "webpack": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.7.3"
   }
 }
