--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-slick": "0.28.1",
     "react-slugify": "^2.0.3",
     "styled-components": "5.3.0",
-    "uuidv4": "^6.2.10",
+    "uuid": "^8.3.2",
     "webpack": "^5.0.0"
   },
   "devDependencies": {
