--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "start": "next start",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && rm -rf .next/ && npm install && npm run dev"
   },
-  "author": "Iain Collins <me@iaincollins.com>",
+  "author": "M Shahbaz <mr.shahbaz.aslam@gmail.com>",
   "contributors": [
-    "Balázs Orbán <info@balazsorban.com>"
+    "Code and speed solutions <codeandspeed@gmail.com>"
   ],
   "license": "ISC",
   "dependencies": {
@@ -44,7 +44,7 @@
     "next-images": "1.7.0",
     "next-transpile-modules": "^8.0.0",
     "nextjs-redirect": "5.0.2",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.14.1",
     "nouislider": "15.1.0",
     "path": "0.12.7",
     "phone": "^3.1.2",
@@ -59,7 +59,10 @@
     "styled-components": "5.3.0",
     "uuid": "^8.3.2",
     "validator": "^13.6.0",
-    "webpack": "^5.0.0"
+    "webpack": "^5.0.0",
+    "react-redux": "^7.1.0",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2"
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.3"
