--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "country-state-city": "^3.0.0",
     "leaflet": "^1.7.1",
     "moment": "2.29.1",
-    "next": "10.2.0",
+    "next": "^10.2.3",
     "next-auth": "latest",
     "next-compose-plugins": "2.2.1",
     "next-images": "1.7.0",
@@ -53,16 +53,16 @@
     "react-datetime": "3.0.4",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.0",
+    "react-redux": "^7.1.0",
     "react-slick": "0.28.1",
     "react-slugify": "^2.0.3",
     "react-toastify": "^7.0.4",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
     "styled-components": "5.3.0",
     "uuid": "^8.3.2",
     "validator": "^13.6.0",
-    "webpack": "^5.0.0",
-    "react-redux": "^7.1.0",
-    "redux": "^3.6.0",
-    "redux-devtools-extension": "^2.13.2"
+    "webpack": "^5.0.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.3"
