--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
     "react-datetime": "3.0.4",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.1.0",
     "react-slick": "0.28.1",
     "react-slugify": "^2.0.3",
     "react-toastify": "^7.0.4",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
+    "sanitize-html": "^2.4.0",
     "styled-components": "5.3.0",
     "uuid": "^8.3.2",
     "validator": "^13.6.0",
