--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "country-state-city": "^3.0.0",
     "leaflet": "^1.7.1",
     "moment": "2.29.1",
+    "naics": "^1.2.1",
     "next": "^10.2.3",
     "next-auth": "latest",
     "next-compose-plugins": "2.2.1",
