--- a/package.json
+++ b/package.json
@@ -24,18 +24,21 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^29.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.2",
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.4.5",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.4",
     "@react-leaflet/core": "^1.1.0",
     "@react-leaflet/universal-leaflet": "^1.0.1",
     "axios": "^0.21.1",
     "classnames": "2.3.1",
     "country-state-city": "^3.0.0",
+    "date-fns": "^2.23.0",
     "leaflet": "^1.7.1",
     "moment": "2.29.1",
     "naics": "^1.2.1",
