--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "phone": "^3.1.2",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
+    "react-cookie-consent": "^6.4.1",
     "react-datetime": "3.0.4",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.0",
