--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-leaflet": "^3.2.0",
     "react-loading": "^2.0.3",
     "react-redux": "^7.1.0",
+    "react-search-field": "^2.0.1",
     "react-slick": "0.28.1",
     "react-slugify": "^2.0.3",
     "react-toastify": "^7.0.4",
