--- a/serverConfig/Apache/locationbit.com.conf
+++ b/serverConfig/Apache/locationbit.com.conf
@@ -20,5 +20,7 @@
         ProxyPass /api !
         ProxyPass / http://localhost:3000/
         ProxyPassReverse / http://localhost:3000/
-    
+    # LogLevel dumpio:trace7
+    # DumpIOInput On
+    # DumpIOOutput On
 </VirtualHost>
