--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "sanitize-html": "^2.4.0",
+    "slug": "^5.1.0",
     "styled-components": "5.3.0",
     "uuid": "^8.3.2",
     "validator": "^13.6.0",
