--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "google/apiclient": "^2.7",
         "guzzlehttp/guzzle": "^7.0",
         "hackzilla/password-generator": "^1.5",
+        "icamys/php-sitemap-generator": "^4.3",
         "illuminate/database": "^7.4",
         "illuminate/pagination": "^7.9",
         "jumbojett/openid-connect-php": "^0.9.0",
