--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-cookie-consent": "^6.4.1",
     "react-datetime": "3.0.4",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha-v3": "^1.9.8",
     "react-leaflet": "^3.2.0",
     "react-loading": "^2.0.3",
     "react-redux": "^7.1.0",
